--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>I am doing good.</h1>
+    <h2>I am clear my problem.</h2>
+    <h2>I can understand now gittu babu.</h2>
 </body>
 </html>
