I am doing color

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My fourth repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>I am doing good.</h1>
     <h2>I am clear my problem.</h2>
     <h2>I can understand now gittu babu.</h2>
+    <p>I am feeling very happy right now</p>
 </body>
 </html>
